clusters/building-blocks/media/apps/seerr/app/seerr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
  labels:
    app.kubernetes.io/name: seerr
spec:
  selector:
    app.kubernetes.io/name: seerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
