clusters/building-blocks/media/apps/seerr/app/seerr-ingressroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: media
  labels:
    app.kubernetes.io/name: seerr
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`browse.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: local-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: seerr
          namespace: media
          passHostHeader: true
          port: 80
          scheme: http
